--- a/evidence-upload.html
+++ b/evidence-upload.html
@@ -2,38 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Upload Evidence</title>
+  <title>Upload Assessment Evidence</title>
   <style>
-    body { font-family: Arial, sans-serif; max-width: 700px; margin: 40px auto; }
-    label { font-weight: bold; display: block; margin-top: 12px; }
-    select, input, textarea, button {
-      width: 100%;
-      padding: 8px;
-      margin-top: 4px;
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 700px;
+      margin: 40px auto;
     }
-    button { margin-top: 15px; cursor: pointer; }
-    .status { margin-top: 10px; color: #333; }
+    input, button {
+      padding: 8px;
+      width: 100%;
+      margin-top: 8px;
+    }
+    button {
+      cursor: pointer;
+    }
+    .muted {
+      color: #666;
+      font-size: 0.9em;
+    }
   </style>
 </head>
 <body>
 
-<h2>Upload Evidence</h2>
+<h2>Upload Assessment Evidence</h2>
 
-<label>Student</label>
-<select id="studentSelect"></select>
+<p class="muted">
+  Upload learner work (photo, PDF, audio, video) as evidence for this competency.
+</p>
 
-<label>Competency</label>
-<select id="competencySelect"></select>
-
-<label>Evidence File</label>
 <input type="file" id="fileInput" />
-
-<label>Description (optional)</label>
-<textarea id="description" rows="3"></textarea>
 
 <button id="uploadBtn">Upload Evidence</button>
 
-<p id="status" class="status"></p>
+<p id="status"></p>
+
+<hr>
+
+<button onclick="window.location.href='assessment-competencies.html'">
+  ⬅ Back to Assessment
+</button>
 
 <script type="module">
   import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
@@ -44,112 +52,77 @@
   );
 
   const status = document.getElementById("status");
+  const fileInput = document.getElementById("fileInput");
 
-  /* 🔐 Auth */
+  /* 🔐 Auth check */
   const { data: { user } } = await supabase.auth.getUser();
-  if (!user) location.href = "index.html";
+  if (!user) {
+    window.location.href = "index.html";
+    throw new Error("Not logged in");
+  }
 
   /* 📦 Context */
   const assessmentId = localStorage.getItem("assessment_id");
+  const competencyId = localStorage.getItem("current_competency_id");
   const studentIds = JSON.parse(localStorage.getItem("selected_students") || "[]");
 
-  if (!assessmentId || !studentIds.length) {
+  if (!assessmentId || !competencyId || !studentIds.length) {
     status.innerText = "Missing assessment context.";
     throw new Error("Missing context");
   }
 
-  /* 👤 Load students */
-  const { data: students } = await supabase
-    .from("students")
-    .select("id, first_name, last_name")
-    .in("id", studentIds);
-
-  const studentSelect = document.getElementById("studentSelect");
-  studentSelect.innerHTML =
-    `<option value="">Select student</option>` +
-    students.map(s =>
-      `<option value="${s.id}">${s.first_name} ${s.last_name}</option>`
-    ).join("");
-
-  /* 📘 Load competencies */
-  const { data: competencies } = await supabase
-    .from("competencies")
-    .select("id, name")
-    .order("name");
-
-  const competencySelect = document.getElementById("competencySelect");
-  competencySelect.innerHTML =
-    `<option value="">Select competency</option>` +
-    competencies.map(c =>
-      `<option value="${c.id}">${c.name}</option>`
-    ).join("");
-
-  /* ⬆️ Upload logic */
+  /* ⬆ Upload handler */
   document.getElementById("uploadBtn").onclick = async () => {
-    const studentId = studentSelect.value;
-    const competencyId = competencySelect.value;
-    const file = document.getElementById("fileInput").files[0];
-    const description = document.getElementById("description").value;
-
-    if (!studentId || !competencyId || !file) {
-      status.innerText = "Select student, competency, and file.";
+    const file = fileInput.files[0];
+    if (!file) {
+      status.innerText = "Please select a file first.";
       return;
     }
 
-    /* 🔎 Find assessment_result */
-    const { data: result, error: resultError } = await supabase
-      .from("assessment_results")
-      .select("id")
-      .eq("assessment_id", assessmentId)
-      .eq("student_id", studentId)
-      .eq("competency_id", competencyId)
-      .single();
+    status.innerText = "Uploading evidence...";
 
-    if (resultError || !result) {
-      status.innerText = "Assessment result not found. Assess first.";
-      return;
-    }
+    const fileExt = file.name.split(".").pop();
+    const filePath =
+      `evidence/${assessmentId}/${competencyId}/${crypto.randomUUID()}.${fileExt}`;
 
-    /* ☁️ Upload file */
-    const filePath = `${assessmentId}/${studentId}/${Date.now()}_${file.name}`;
-
+    /* 1️⃣ Upload to storage */
     const { error: uploadError } = await supabase.storage
-      .from("evidence")
-      .upload(filePath, file);
+      .from("assessment-evidence")
+      .upload(filePath, file, { upsert: false });
 
     if (uploadError) {
       status.innerText = uploadError.message;
       return;
     }
 
-    /* 👤 Profile */
-    const { data: profile } = await supabase
-      .from("profiles")
-      .select("id")
-      .eq("auth_id", user.id)
-      .single();
+    /* 2️⃣ Get public URL */
+    const { data: urlData } = supabase.storage
+      .from("assessment-evidence")
+      .getPublicUrl(filePath);
 
-    /* 💾 Save evidence */
-    const { error } = await supabase
+    const fileUrl = urlData.publicUrl;
+
+    /* 3️⃣ Save DB records (one per student) */
+    const rows = studentIds.map(student_id => ({
+      assessment_id: assessmentId,
+      student_id,
+      competency_id: competencyId,
+      file_url: fileUrl,
+      file_type: file.type,
+      uploaded_by: user.id
+    }));
+
+    const { error: dbError } = await supabase
       .from("assessment_evidence")
-      .insert({
-        student_competency_record_id: result.id,
-        assessment_id: assessmentId,
-        student_id: studentId,
-        competency_id: competencyId,
-        file_url: filePath,
-        file_type: file.type,
-        uploaded_by: profile.id
-      });
+      .insert(rows);
 
-    if (error) {
-      status.innerText = error.message;
+    if (dbError) {
+      status.innerText = dbError.message;
       return;
     }
 
-    status.innerText = "Evidence uploaded successfully.";
-    document.getElementById("fileInput").value = "";
-    document.getElementById("description").value = "";
+    status.innerText = "✅ Evidence uploaded successfully.";
+    fileInput.value = "";
   };
 </script>
 
