--- a/evidence-upload.html
+++ b/evidence-upload.html
@@ -102,13 +102,16 @@
 
     const fileUrl = urlData.publicUrl;
 
-    /* 3️⃣ Save DB records (one per student) */
+    /* ✅ FIX: normalize file type */
+    const file_type = getFileType(file);
+
+    /* 3️⃣ Save DB records */
     const rows = studentIds.map(student_id => ({
       assessment_id: assessmentId,
       student_id,
       competency_id: competencyId,
       file_url: fileUrl,
-      file_type: file.type,
+      file_type,          // ✅ NOW MATCHES DB CHECK
       uploaded_by: user.id
     }));
 
@@ -124,6 +127,14 @@
     status.innerText = "✅ Evidence uploaded successfully.";
     fileInput.value = "";
   };
+
+  /* 🔧 CBC-safe file type mapping */
+  function getFileType(file) {
+    if (file.type.startsWith("image/")) return "image";
+    if (file.type.startsWith("video/")) return "video";
+    if (file.type.startsWith("audio/")) return "audio";
+    return "document"; // PDFs, DOCX, PPT, etc
+  }
 </script>
 
 </body>
