--- a/assessment-competencies.html
+++ b/assessment-competencies.html
@@ -174,6 +174,21 @@
       status.innerText = "Results saved successfully.";
     }
 
+
+
+// ✅ ENSURE competency_assessment exists
+await supabase
+  .from("competency_assessments")
+  .upsert({
+    assessment_id: assessmentId,
+    student_id: studentIds[0],
+    competency_id
+  }, {
+    onConflict: "assessment_id,student_id,competency_id"
+  });
+
+
+    
     /* 🔑 FETCH competency_assessments ID (REQUIRED FOR EVIDENCE) */
     const { data: ca, error } = await supabase
       .from("competency_assessments")
