--- a/assessment-competencies.html
+++ b/assessment-competencies.html
@@ -193,24 +193,26 @@
     /* ===============================
        ENSURE competency_assessment
     =============================== */
-   await supabase
+ const { error: caUpsertError } = await supabase
   .from("competency_assessments")
   .upsert({
     assessment_id: assessmentId,
     student_id: studentIds[0],
     competency_id,
-    term: assessment.term_id,
+    achievement_level_id,          // 🔥 REQUIRED
+    term: assessment.term_id,       // 🔥 REQUIRED
     academic_year: assessment.academic_year,
     created_by: user.id
   }, {
     onConflict: "assessment_id,student_id,competency_id"
   });
 
+if (caUpsertError) {
+  status.innerText = caUpsertError.message;
+  return;
+}
+ 
 
-    if (caUpsertError) {
-      status.innerText = caUpsertError.message;
-      return;
-    }
 
     /* ===============================
        FETCH competency_assessment ID
