--- a/assessment-competencies.html
+++ b/assessment-competencies.html
@@ -202,6 +202,7 @@
     achievement_level_id,          // 🔥 REQUIRED
     term: assessment.term_id,       // 🔥 REQUIRED
     academic_year: assessment.academic_year,
+      teacher_id: user.id,    
     created_by: user.id
   }, {
     onConflict: "assessment_id,student_id,competency_id"
